Added some linter stuff. - eslintrc has been modified for airbnb - package.json has been modified for local eslint installation.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,25 +1,9 @@
 {
-    "env": {
-        "browser": true
-    },
-    "extends": "eslint:recommended",
-    "rules": {
-        "indent": [
-            "error",
-            4
-        ],
-        "linebreak-style": [
-            "error",
-            "windows"
-        ],
-        "quotes": [
-            "error",
-            "double"
-        ],
-        "semi": [
-            "error",
-            "always"
-        ],
-        "eqeqeq": 2
-    }
+    "extends": "airbnb",
+    "installedESLint": true,
+    "plugins": [
+        "react",
+        "jsx-a11y",
+        "import"
+    ]
 }
